# Q4_Sol_francis_codex

./: Anchor.toml  README.md  package-lock.json  package.json
programs/project-payclip/: Cargo.toml
programs/project-payclip/src/: lib.rs
tests/: project-payclip.ts
ts/: package.json
ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_mint.ts
