[package]
name = "payclip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payclip"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[features]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
solana = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
